v2.0.5:
### Changes
- The project has been migrated from yarn to mojmap mappings.
- Added Fabric support for 1.21, and 1.21.9–1.21.11
- Added (Neo)Forge support for 1.21–1.21.11
- Added support for bossbar, subtitles, and chat

### Fixes
- Added status/progress bar shifting when the hotbar is hidden
- Fixed HUD fading behavior

### Internal
- Refactored parts of the codebase